# Neurabot

Database/backend/: admin_api.py
Database/frontend/: AdminPanel.jsx  api.js
backend/: Dockerfile  docker-compose.yml  pyproject.toml  redis.conf
backend/app/: api.py  auth.py  config.py  db.py  export.py  loader.py  main.py  openai.py  postgres.py
backend/app/assistants/: assistant.py  local_assistant.py  prompts copy.py  prompts.py  tools.py
backend/app/utils/: preprocessing.py  query_parser.py
backend/data/docs/: optimized_products_final_updated.json  products.json
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ChatInput.jsx  ChatMessages.jsx  Chatbot.jsx
frontend/src/hooks/: useAutoScroll.js
